# jarvis-client

./: .gitignore  Dockerfile  README.md  TODO  deploy_test.py  docker-compose.yml  listener_test.py
Dockerfiles/: server.dockerfile
app/: config.py  dashboards.py  main.py  modules_util.py  pyproject.toml
app/api/v1/: api.py
app/api/v1/endpoints/: modules.py  tasks.py
app/core/: _logging.py
app/models/: modules.py  tasks.py
app/modules/: bed_heater.py
app/modules/my_package/: my_module.py
app/workers/: __init__.py
dashboard/: pyproject.toml
dockerfiles/: client.dockerfile  dashboard.dockerfile  scheduler.dockerfile  workers.dockerfile
listener/: audio.py  config.py  main.py  pyproject.toml
scheduler/: pyproject.toml
workers/: pyproject.toml
