[tool.poetry]
name = "jarvis-client"
version = "0.1.0"
description = ""
authors = ["Taylor Young <y.taylor@rocketmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
pydantic = "^1.8.2"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
rq = "^1.10.0"
rq-scheduler = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
