[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "Custom RQ dashboard deployment"
authors = ["Taylor Young <y.taylor@rocketmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rq-scheduler-dashboard = "^0.0.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
