[tool.poetry]
name = "listener"
version = "0.1.0"
description = "Microphone listener for Jarvis client"
authors = ["Taylor Young <y.taylor@rocketmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
loguru = "^0.5.3"
websockets = "^10.0"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
